--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="Sample efficient policy learning for manipulation in 3D">
   <meta name="keywords" content="Generative Model, Equivariance, Geometric deep learning, Manipulation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Imagination Policy</title>
+  <title>Gumbel Priors for Set-to-Set Matching</title>
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
   <script type="text/x-mathjax-config">
